--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -57,9 +57,9 @@
 		'custom/nav',
 		'custom/close-bar',
 		'custom/pages',
-		'custom/blocks',
-		'custom/filters',
 		'custom/images',
+		'custom/spacing',
+		'custom/filters',
 		'custom/modal',
 		'custom/video',
 		'custom/animate',
