--- a/_scss/custom/_video.scss
+++ b/_scss/custom/_video.scss
@@ -39,6 +39,13 @@
 	}
 }
 
+.desktop-video-wrap h1,
+.mobile-static-wrap h1 {
+	font-style: italic;
+	color: #fff;
+}
+
+
 .text-container {
 	position: absolute;
 	top: 0;
