--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -5,114 +5,106 @@
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
 
-// heads
+
+
+// heads ...........................................................    
+
 
 h1 {
     font-family: "adobe-caslon-pro",serif;
-	font-size: rem-calc(32);
+	font-size: 5.5vmax;
     
 	@include breakpoint(medium) {
-   		font-size: 8vw;
-	}
-	@include breakpoint(large) {
-   		font-size: 7vw;
+   		font-size: 7.5vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: rem-calc(80);
+		font-size: 11vmin;
 	}
 }
 
 h2 {
 	font-family: "adobe-caslon-pro",serif;
-	font-size: rem-calc(27);
+	font-size: 4.76vmax;
    
 	@include breakpoint(medium) {
-		font-size: 7vw;
-	}
-	@include breakpoint(large) {
-		font-size: 6vw;
+		font-size: 6.3vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: rem-calc(70);
+		font-size: 9.53vmin;
 	}
 }
 
 h3 {
 	font-family: "adobe-caslon-pro",serif;
-	font-size: rem-calc(24);
+	font-size: 4.03vmax;
 	line-height: 1.2;
    
 	@include breakpoint(medium) {
-		font-size: 5vw;
-	}
-	@include breakpoint(large) {
-		font-size: 4.5vw;
+		font-size: 5.3vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: rem-calc(60);
+		font-size: 8.06vmin;
 	}
 }
 
 h4 {
 	font-family: "proxima-nova",sans-serif;
-	font-size: rem-calc(18);
+	font-size: 3.3vmax;
 	color: $warm-gray-2;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
 	
 	@include breakpoint(medium) {
-		font-size: 3vw;
+		font-size: 4.3vw;
 	}
-	@include breakpoint(large) {
-		font-size: 2.5vw;
+	@include breakpoint(xlarge) {
+		font-size: 6.6vmin;
 	}
 	
 }
 
 h5 {
-	font-size: rem-calc(15);
+	font-size: 3vmax;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
 	margin-top: rem-calc(24);
 	color: $warm-gray-2;
 	
 	@include breakpoint(medium) {
-		font-size: rem-calc(16);
-	}
-	@include breakpoint(large) {
-		font-size: rem-calc(19);
-	}
-	
-}
-
-// paragraph
-
-p {
-	
-	font-size: rem-calc(15);
-
-	@include breakpoint(medium) {
-		font-size: rem-calc(16);
+		font-size: 3.4vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: rem-calc(19);
+		font-size: 5.13vmin;
 	}
 	
 }
+
+
+// paragraph ...........................................................
 
 p.larger-text,
 .larger-text p {
 
-	font-size: rem-calc(15);
+	font-size: 2.9vmax;
 
 	@include breakpoint(medium) {
-		font-size: rem-calc(19);
-	}
-	@include breakpoint(large) {
-		font-size: rem-calc(22);
+		font-size: 2.8vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: rem-calc(25);
+		font-size: 3.6vmin;
+	}
+	
+}
+
+p, li {
+	
+	font-size: 2.5vmax;
+
+	@include breakpoint(medium) {
+		font-size: 2.3vw;
+	}
+	@include breakpoint(xlarge) {
+		font-size: 3vmin;
 	}
 	
 }
@@ -132,8 +124,7 @@ p a:hover {
 }
 
 
-/* well, just, because it was designed in indesign
------------------------------------------------------------------------- */
+// well, just, because it was designed in indesign .....................
 
 h2.small-caps {
 	text-transform: uppercase;
@@ -155,8 +146,7 @@ h2.small-caps {
 }
 
 
-/* heads with bottom border
------------------------------------------------------------------------- */
+// heads with bottom border ............................................
 
 h3 span {
 	display: inline-block;
@@ -186,16 +176,15 @@ h5 span {
 }
 
 
-/* other special head styles
------------------------------------------------------------------------- */
+// other special head styles ...........................................
+
 
 .sidebar h5 {
 	margin-top: 0.5rem;
 }
 
 
-/* reduce flash of unstyled text
------------------------------------------------------------------------- */
+// reduce flash of unstyled text .......................................
 
 .wf-loading h1 {
 	visibility: hidden;
@@ -206,8 +195,7 @@ h5 span {
 }
 
 
-/* links with right arrow
------------------------------------------------------------------------- */
+// links with right arrow ..............................................
 
 a.view-more {
 	display: inline-block;
